--- a/latest/documentation.html
+++ b/latest/documentation.html
@@ -58,7 +58,9 @@
           <ul class="dropdown-menu" aria-labelledby="versions">
             <li><a href="/component-runtime/index.html">Current</a></li>
             <li><a href="/component-runtime/latest/index.html">Latest</a></li>
-            <!-- @VERSIONS@ -->
+            <!-- -->
+            <li><a href="/component-runtime/1.0.0-SNAPSHOT/index.html">1.0.0-SNAPSHOT</a></li>
+            <!-- -->
           </ul>
         </li>
       </ul>
